--- a/Config/SteamVRBindings/steamvr_manifest.json
+++ b/Config/SteamVRBindings/steamvr_manifest.json
@@ -78,19 +78,7 @@
 			"requirement": "optional"
 		},
 		{
-			"name": "/actions/main/in/TeleportRight",
-			"type": "boolean"
-		},
-		{
-			"name": "/actions/main/in/TeleportLeft",
-			"type": "boolean"
-		},
-		{
-			"name": "/actions/main/in/GrabLeft",
-			"type": "boolean"
-		},
-		{
-			"name": "/actions/main/in/GrabRight",
+			"name": "/actions/main/in/DropItem",
 			"type": "boolean"
 		},
 		{
@@ -220,10 +208,7 @@
 			"/actions/main/out/vibrateleft": "Haptic (Left)",
 			"/actions/main/out/vibrateright": "Haptic (Right)",
 			"/actions/main/in/open_console": "Open Console",
-			"/actions/main/in/TeleportRight": "TeleportRight",
-			"/actions/main/in/TeleportLeft": "TeleportLeft",
-			"/actions/main/in/GrabLeft": "GrabLeft",
-			"/actions/main/in/GrabRight": "GrabRight",
+			"/actions/main/in/DropItem": "DropItem",
 			"/actions/main/in/EquipItemRight": "EquipItemRight",
 			"/actions/main/in/MotionControllerThumbLeft_X,MotionControllerThumbLeft_Y X Y_axis2d": "MotionControllerThumbLeft",
 			"/actions/main/in/MotionControllerThumbRight_X,MotionControllerThumbRight_Y X Y_axis2d": "MotionControllerThumbRight",
